CHANGELOG
=========


0.2 (unreleased)
----------------

- Nothing changed yet.


0.1.1 (2009-11-15)
------------------

- Added option ``log_level`` which sets the default log level (``DEBUG``,
  ``ERROR``).
- Added log window. Log messages with level ``DEBUG`` will show up here
  instead of at the shell.


0.1 (2009-11-06)
----------------

- begin Changelog

- added import of projects and tasks from Collmex

- added export of activities to Collmex