@@ -5,7 +5,8 @@ CHANGELOG
 0.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Populate history with all previous entries, sort reverse-chronological.
+- Added 'delete last entry' command.
 
 
 0.1.1 (2009-11-15)
